src/objects/Materials_Hub_Worksheet__c.object
<CustomObject>
    <description>Materials Hub Worksheet for MCAR Claims</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount</description>
        <formula>Qty_Hours__c * Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category</description>
        <inlineHelpText>Category</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Incoming Inspection/ Identity Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT or other taxes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Claim</description>
        <inlineHelpText>Claim</inlineHelpText>
        <label>Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipName>NCC_Materials_Hub_Worksheet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qty_Hours__c</fullName>
        <label>Qty/Hours</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit Price</description>
        <inlineHelpText>Unit Price</inlineHelpText>
        <label>Unit Price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>NCC Materials Hub Worksheet</label>
    <nameField>
        <displayFormat>CMHUWS-{0000}</displayFormat>
        <label>Materials Hub Worksheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCC Materials Hub Worksheet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>